--- a/content/featurettes/leasingly.yaml
+++ b/content/featurettes/leasingly.yaml
@@ -1,9 +1,9 @@
 header:
   image: ../assets/Caterina_AboutPage.png
   title:
-    title: Distributed Leadership and Digital Innovation
+    title: Leasingly
     colour: "#EF233C"
-    description: T. E. Shaw of Digytle discovered Distributed Leadership and Digital Innovation and met the author Caterina Maniscalco.
+    description: Plug-n-Play Financing Solution
 sections:
 - section:
   title:
