--- a/content/featurettes/thomas-lloyd.yaml
+++ b/content/featurettes/thomas-lloyd.yaml
@@ -73,3 +73,17 @@ action:
   - button:
     link: https://www.waterstones.com/book/distributed-leadership-and-digital-innovation/caterina-maniscalco//9780367361488
     image: ../assets/Waterstones.png
+contact:
+  text:
+    heading: Do you want to work with us
+    subheading: Lets get in touch
+    color: "#567d46"
+  options:
+  - option:
+    text: Contact us for Caterina
+  - option:
+    text: Contact us for a Conversational chatbot
+  - option:
+    text: Contact us for a Digytle for executives
+  confirm:
+    text: I agree to recieve news from Digytle
