--- a/content/featurettes/blits-conversational-bots-management-ecosystem.yaml
+++ b/content/featurettes/blits-conversational-bots-management-ecosystem.yaml
@@ -53,6 +53,12 @@ sections:
     description: Written like a PhD, the book has the rare power to instruct and convince.
     colour: "#855c9c"
 - section:
+  video:
+    url: ../assets/Blits-Engine.mp4
+    title: Video title
+    description: This is a video
+    colour: "#855c9c"
+- section:
   text:
     - Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice. Caterina was born in New York and spent the last 20 years consulting digital strategy. Long form biography of her choice.
     - Caterina is available as a consultant, lecturer and speaker.
