--- a/content/featurettes/green-atlas-earth.yaml
+++ b/content/featurettes/green-atlas-earth.yaml
@@ -43,8 +43,14 @@ sections:
   text:
     - Green Atlas began in the Netherlands and is preparing for international use.
 - section:
+  video:
+    url: ../assets/ga.e.mp4
+    title: Video title
+    description: This is a video
+    colour: "#567d46"
+- section:
   imageWide:
-    url: ../assets/the-crew.png
+    url: ../assets/ga.e-img.jpg
     title: Solid Science
     description: Written like a PhD, the book has the rare power to instruct and convince.
     colour: "#567d46"
