--- a/content/featurettes/green-atlas-earth.yaml
+++ b/content/featurettes/green-atlas-earth.yaml
@@ -15,7 +15,7 @@ sections:
   - A most misunderstood point about talent is that it need not be young or inexperienced. People reach turning points in their career and need as much help to figure out what they want and can do next, as the smallest child.
 - section:
   title:
-    title: Endless Innovation 
+    title: Endless Innovation
     colour: "#567d46"
 - section:
   text:
@@ -31,7 +31,7 @@ sections:
   - Green Atlas is relentlessly business and relentlessly green. It is a powerful busienss tool and a powerful tool of ecological transformation. It begins by allowing green enthusiasts to explore renuable options and then helps them transform the dreams into viable projects.
 - section:
   image:
-    url: ../assets/book-img.png
+    url: ../assets/ga.e-f.png
     title: Solid Science
     description: Written like a PhD, the book has the rare power to instruct and convince.
     colour: "#567d46"
@@ -62,7 +62,7 @@ action:
   text:
     question: Would you like to learn more about Green Atlas?
     description: Visit the website.
-    background: 
+    background:
   buttons:
   - button:
     link: https://greenatlas.earth/
