--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "js-yaml-loader": "^1.2.2",
     "vue": "^2.6.11",
+    "vue-gtag": "^1.14.0",
     "vue-router": "^3.2.0",
     "vue-scrollto": "^2.18.1"
   },
