new images for blits.ai and latest work

--- a/content/featurettes/blits-conversational-bots-management-ecosystem.yaml
+++ b/content/featurettes/blits-conversational-bots-management-ecosystem.yaml
@@ -34,7 +34,7 @@ sections:
   - Thomas, maybe an example of a lesson learned from book or your experience of dist lead.
 - section:
   image:
-    url: ../assets/book-img.png
+    url: ../assets/blits.ai-f.png
     title: Different is Better than Better
     description: Written like a PhD, the book has the rare power to instruct and convince.
     colour: "#855c9c"
@@ -48,7 +48,7 @@ sections:
     - "Unlike the majority of chatbots, Blits is unlimited: it can be connecte to a unlimited Natural Language Processing (NLP) languages, to a unlimited number of conversation channels (web, app, voice) and to a unlimited number of SME or Enterprise IT systems and landscapes."
 - section:
   imageWide:
-    url: ../assets/the-crew.png
+    url: ../assets/blits.ai-f2.png
     title: Solid Science
     description: Written like a PhD, the book has the rare power to instruct and convince.
     colour: "#855c9c"
@@ -66,7 +66,7 @@ action:
   text:
     question: Would you like to learn more about Blits?
     description: Book a free conversation :)
-    background: 
+    background:
   buttons:
   - button:
     link: https://calendly.com/
