--- a/content/work.yaml
+++ b/content/work.yaml
@@ -17,8 +17,8 @@ left:
   image: assets/blits-ai.png
   template: featurettes
   link: blits-conversational-bots-management-ecosystem
-- title: Renewable Energy Assisted Marketplace
-  description: greenaltas.earth is an assisted marketplace informing, educating, preparing and matching site owners and project developers in the green energy marketplace, as well as providing them with rich data and tools for and beyond the matchmaking.
+- title: Assisted Marketplace for Renewable Energy
+  description: greenaltas.earth is an assisted marketplace guiding, educating and matching site owners with project developers in the green energy ecosystem, as well as providing them with data and tools to support their decision making.
   image: assets/ga.e.png
   template: featurettes
   link: green-atlas-earth
@@ -35,13 +35,13 @@ right:
   image: assets/stichting.png
   template: featurettes
   link: stichting-bedrijfsfinanciering
-- title: Digytising a 40-Years-Old German Investment Fund 
-  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era
+- title: Digitising a 40-Years-Old German Investment Fund 
+  description: Prior to that one had to go with a suitcase with half a million Euro to München. Now one can begin with €10 000 from the comfort of their home.
   image: assets/solidvest.png
   template: featurettes
   link: dje-kapital-ag-solidvest
-- title: Digytising an International Investment Fund
-  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era
+- title: Digitising an International Investment Fund
+  description: Thomas Lloyd asked us to help them extend the digitalisation of investment funds across national borders, legal requirements and cultural barieers. And we haven't even mentioned compliance.
   image: assets/thomas-lloyd.png
   template: featurettes
   link: thomas-lloyd
