--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -2,7 +2,7 @@ headerFirst: Progressive Products and Tailored Solutions
 descriptionFirst:  From complex banking platforms through to 'no code' chatbot deployment thats compatible with any AI engine. Digytle will help you navigate, develop and utilise the best digital products and practices, bring new products to market, and grow and improve your existing ones.
 
 headerSecond: Talent Scouting and Nurseries 
-descriptionSecond: Digytle's unique talent scouting methodology and talent nurseries allow us to hire incredible individuals. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most brilliant minds of their generation, from all across Europe.
+descriptionSecond: Digytle implements Dahoum's approach to talent scouting & nurseries, discovering and developing both undiscovered and lost talent. The discovery and development begin at age 8-12, amd continue with guidance in respect to university education and early involvement in actual project. Digytle's talent pool os available for a variety of engagement scenarios.
 
 headerThird: Assured Quality and Uncompromised Testing
 descriptionThird: We specialise in the full lifecycle of quality. Digytle has delivered Software Product Quality Assurance Control Frameworks for companies such as KPMG and automated European Securities and Markets Authority compliance monitoring for investment house Thomas Lloyd. 
