--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,7 +1,7 @@
 headerFirst: Progressive Products and Tailored Solutions
 descriptionFirst:  From complex banking platforms through to 'no code' chatbot deployment thats compatible with any AI engine. Digytle will help you navigate, develop and utilise the best digital products and practices, bring new products to market, and grow and improve your existing ones.
 
-headerSecond: Talent Scouting and Nurseries 
+headerSecond: Talent Scouting & Nurseries 
 descriptionSecond: Digytle implements Dahoum's approach to talent scouting & nurseries, discovering and developing both undiscovered and lost talent. The discovery and development begin at age 8-12, and continue with guidance in respect to university education and early involvement in actual projects. Digytle's talent pool is available for a variety of engagement scenarios.
 
 headerThird: Assured Quality and Uncompromised Testing
