--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -4,8 +4,8 @@ descriptionFirst:  From complex banking platforms through to 'no code' chatbot d
 headerSecond: Talent Scouting & Nurseries 
 descriptionSecond: Digytle implements Dahoum's approach to talent scouting & nurseries, discovering and developing both undiscovered and lost talent. The discovery and development begin at age 8-12, and continue with guidance in respect to university education and early involvement in actual projects. Digytle's talent pool is available for a variety of engagement scenarios.
 
-headerThird: Assured Quality and Uncompromised Testing
-descriptionThird: We specialise in the full lifecycle of quality. Digytle has delivered Software Product Quality Assurance Control Frameworks for companies such as KPMG and automated European Securities and Markets Authority compliance monitoring for investment house Thomas Lloyd. 
+headerThird: Endless Quality
+descriptionThird: Quality, defined as fitness for purpose, competitiveness and robustness, begins with the conception of the idea and accomompanies it until the very end. Thus, issues with quality can be rooted in a multitude of places: from choosing who you work with, through how you work, to how you use tools to help you manage and watch the quality, receive notifications, act and meet requirements imposed by compliance.
 
 headerForth: Pioneering Thinking and Digital Leadership
 descriptionForth: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design. 
