--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,5 +1,5 @@
 headerFirst: Progressive Products and Tailored Solutions
-descriptionFirst:  From complex banking platforms through to 'no code' chatbot deployment thats compatible with any AI engine. Digytle will help you navigate, develop and utilise the best digital products and practices, bring new products to market, and grow and improve your existing ones.
+descriptionFirst:  From complex banking platforms through to chatbot deployments, that can utilise 40+ NLP engine. Digytle will help you choose, develop and run the best digital experience. We do this with Dutch honesty, questioning every step and exploring a rich variety of options, until we choose the best one for your budget and purpose.
 
 headerSecond: Talent Scouting & Nurseries 
 descriptionSecond: Digytle implements Dahoum's approach to talent scouting & nurseries, discovering and developing both undiscovered and lost talent. The discovery and development begin at age 8-12, and continue with guidance in respect to university education and early involvement in actual projects. Digytle's talent pool is available for a variety of engagement scenarios.
