--- a/content/featurettes.yaml
+++ b/content/featurettes.yaml
@@ -16,8 +16,8 @@ features:
   image: assets/bot.featurette.png
   template: featurettes
   link: conversational-bots
-- name: Digytle for Executives
-  description: Software engineers must understand business people, but do business people understand software engineers? Between one and three fun sessions of Digytle for Executives will help you better understand each other.
+- name: Scratch for Executives
+  description: Engineers must understand the business, but does business understand the engineers? Fun one-on-one sessions for young, tired or confused executives, psychoterapy of sorts, helping you to make sense of the surrounding world and succeed.
   image: assets/code.featurettes.png
   template: featurettes
-  link: digytle-for-executives
+  link: scratch-for-executives
