--- a/content/featurettes.yaml
+++ b/content/featurettes.yaml
@@ -16,8 +16,8 @@ features:
   image: assets/bot.featurette.png
   template: featurettes
   link: conversational-bots
-- name: Scratch for Executives
+- name: Digytle for Executives
   description: Engineers must understand the business, but does business understand the engineers? Fun one-on-one sessions for young, tired or confused executives, psychoterapy of sorts, helping you to make sense of the surrounding world and succeed.
   image: assets/code.featurettes.png
   template: featurettes
-  link: scratch-for-executives
+  link: digytle-for-executives
