--- a/content/featurettes.yaml
+++ b/content/featurettes.yaml
@@ -17,7 +17,7 @@ features:
   template: featurettes
   link: conversational-bots
 - name: Digytle for Executives
-  description: The frequently quoted, but seldom understood Agile Manifesto is four lines long. Not even four sentences. It begins with: "Individuals and interactions..." Fun one-on-one sessions for young, tired or confused executives, psychoterapy of sorts, helping them to make sense of the surrounding world and succeed.
+  description: 'The frequently quoted, but seldom understood Agile Manifesto is four lines long. Not even four sentences. It begins with: "Individuals and interactions..." Fun one-on-one sessions for young, tired or confused executives, psychoterapy of sorts, helping them to make sense of the surrounding world and succeed.'
   image: assets/code.featurettes.png
   template: featurettes
   link: digytle-for-executives
