--- a/content/featurettes/digytle-for-executives.yaml
+++ b/content/featurettes/digytle-for-executives.yaml
@@ -59,6 +59,10 @@ sections:
     text:
       - T. E. Shaw is passionate about discovering and developing talent. His craft cannot sacale and is not suitable for industrialisation. This is why he is rather selective.
       - The main condition to be chosen is to be brave and persistant.
+      - One session for free.
+      - Next sessions at the cost of €... per 25 minutes with weekly, monthly, quarterly semi-annual or annual frequency as well as on demand.
+      - You get a listener, a councellor and a hand written diary for you to keep and remiscense upon, until the next session or forever.
+      - "Topics: personal growth, work-live-balance, leadership, digital,..."
 action: 
   text:
     question: Would you like to taste T.E.'s unique style?
