--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,11 +1,19 @@
 headerFirst: Progressive Products and Tailored Solutions
 descriptionFirst:  From complex banking platforms through specialised bookshops to chatbot deployments, that can utilise 40+ NLP engines, Digytle will help you choose, develop and run the best digital experience. We do this with Dutch honesty, questioning every step and exploring a rich variety of options, until we choose the best one for your budget and purpose.
+templateFirst: featurettes
+linkFirst: progressive-products-and-tailored-solutions
 
-headerSecond: Talent Scouting & Nurseries 
+headerSecond: Talent Scouting & Nurseries
 descriptionSecond: Digytle implements Dahoum's approach to talent scouting & nurseries, discovering and developing both undiscovered and lost talent. The discovery and development begin at age 8-12, and continue with guidance in respect to university education and early involvement in actual projects. Digytle's talent pool is available for a variety of engagement scenarios.
+templateSecond: featurettes
+linkSecond: talent-scoutin-and-nurseries
 
 headerThird: Endless Quality
 descriptionThird: "Quality, defined as fitness for purpose, competitiveness and robustness, begins with the conception of the idea and accomompanies it until the very end. Thus, issues with quality can be rooted in a multitude of places: from choosing who you work with, through how you work, to how you use tools to help you manage and watch the quality, receive notifications, act and meet requirements imposed by compliance."
+templateThird: featurettes
+linkThird: endless-quality
 
 headerForth: Pioneering Thinking and Digital Leadership
-descriptionForth: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design. 
+descriptionForth: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design.
+templateForth: featurettes
+linkForth: pioneering-thinking-and-digital-leadership
