--- a/content/work.yaml
+++ b/content/work.yaml
@@ -35,12 +35,12 @@ right:
   image: assets/stichting.png
   template: featurettes
   link: stichting-bedrijfsfinanciering
-- title: Digitising a 40-Years-Old German Investment Fund
+- title: Transforming a 40 Year Old German Investment Fund
   description: Prior to that one had to go with a suitcase with half a million Euro to München. Now one can begin with €10 000 from the comfort of their home.
   image: assets/solidvest.png
   template: featurettes
   link: dje-kapital-ag-solidvest
-- title: Digitising an International Investment Fund
+- title: Digitising an International Investment Bank
   description: Thomas Lloyd asked us to help them extend the digitalisation of investment funds across national borders, legal requirements and cultural barieers. And we haven't even mentioned compliance.
   image: assets/thomas-lloyd.png
   template: featurettes
