--- a/content/featurettes/talent-scouting-and-nurseries.yaml
+++ b/content/featurettes/talent-scouting-and-nurseries.yaml
@@ -43,9 +43,23 @@ sections:
       smallQuotes: ../assets/small_quotes.svg
 similar:
   - featurette:
-    title: Raspberry Pi Beowulf Cluster
+    title: Lessons
+    topic: "Lesson 1: Raspberry Pi Beowulf Cluster"
     description: 'The frequently quoted, but seldom understood Agile Manifesto is four lines long. Not even four sentences. It begins with: "Individuals and interactions..."'
-    image: ../assets/raspberry-pi-the-pie-hut-transparrent-cluster-with-fans.jpg
+    image: ../assets/caterina.png
+    link: talent-scouting-and-nurseries-raspberry-pi-beowulf-cluster
+more:
+  - featurette:
+    title: Next
+    topic: Raspberry Pi Beowulf Cluster
+    description: 'The frequently quoted, but seldom understood Agile Manifesto is four lines long. Not even four sentences. It begins with: "Individuals and interactions..."'
+    image: ../assets/caterina.png
+    link: talent-scouting-and-nurseries-raspberry-pi-beowulf-cluster
+  - featurette:
+    title: Previous
+    topic: Raspberry Pi Beowulf Cluster
+    description: 'The frequently quoted, but seldom understood Agile Manifesto is four lines long. Not even four sentences. It begins with: "Individuals and interactions..."'
+    image: ../assets/caterina.png
     link: talent-scouting-and-nurseries-raspberry-pi-beowulf-cluster
 action:
   text:
